--- a/templates/kubeadm.yaml
+++ b/templates/kubeadm.yaml
@@ -8,6 +8,8 @@ apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 networking:
   podSubnet: "10.32.0.0/12"
+  serviceSubnet: "10.96.0.0/12"
+  clusterDNSIP: "10.96.0.10"
 controllerManager:
   extraArgs:
     horizontal-pod-autoscaler-use-rest-clients: "true"
