--- a/examples/jenkinsci/jenkins/values.yaml
+++ b/examples/jenkinsci/jenkins/values.yaml
@@ -1,11 +1,12 @@
 master:
   adminUser: admin
   adminPassword: adminPass
+  credentialsXmlSecret: jenkins-credentials-xml
   ingress:
     enabled: true
     hostName: jenkins.192-168-33-10.nip.io
   jobs: 
-    fox-web: | -
+    fox-web: |-
       <?xml version='1.1' encoding='UTF-8'?>
       <flow-definition plugin="workflow-job@2.36">
         <actions>
@@ -35,6 +36,53 @@ master:
             <userRemoteConfigs>
               <hudson.plugins.git.UserRemoteConfig>
                 <url>https://github.com/azzgo/fox-web</url>
+              </hudson.plugins.git.UserRemoteConfig>
+            </userRemoteConfigs>
+            <branches>
+              <hudson.plugins.git.BranchSpec>
+                <name>*/master</name>
+              </hudson.plugins.git.BranchSpec>
+            </branches>
+            <doGenerateSubmoduleConfigurations>false</doGenerateSubmoduleConfigurations>
+            <submoduleCfg class="list"/>
+            <extensions/>
+          </scm>
+          <scriptPath>Jenkinsfile</scriptPath>
+          <lightweight>true</lightweight>
+        </definition>
+        <triggers/>
+        <disabled>false</disabled>
+      </flow-definition>
+    fox-api: |-
+      <?xml version='1.1' encoding='UTF-8'?>
+      <flow-definition plugin="workflow-job@2.36">
+        <actions>
+          <org.jenkinsci.plugins.pipeline.modeldefinition.actions.DeclarativeJobAction plugin="pipeline-model-definition@1.5.0"/>
+          <org.jenkinsci.plugins.pipeline.modeldefinition.actions.DeclarativeJobPropertyTrackerAction plugin="pipeline-model-definition@1.5.0">
+            <jobProperties/>
+            <triggers/>
+            <parameters/>
+            <options/>
+          </org.jenkinsci.plugins.pipeline.modeldefinition.actions.DeclarativeJobPropertyTrackerAction>
+        </actions>
+        <description></description>
+        <keepDependencies>false</keepDependencies>
+        <properties>
+          <org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
+            <triggers>
+              <hudson.triggers.SCMTrigger>
+                <spec>H/3 * * * *</spec>
+                <ignorePostCommitHooks>false</ignorePostCommitHooks>
+              </hudson.triggers.SCMTrigger>
+            </triggers>
+          </org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
+        </properties>
+        <definition class="org.jenkinsci.plugins.workflow.cps.CpsScmFlowDefinition" plugin="workflow-cps@2.78">
+          <scm class="hudson.plugins.git.GitSCM" plugin="git@4.0.0">
+            <configVersion>2</configVersion>
+            <userRemoteConfigs>
+              <hudson.plugins.git.UserRemoteConfig>
+                <url>https://github.com/azzgo/fox-api.git</url>
               </hudson.plugins.git.UserRemoteConfig>
             </userRemoteConfigs>
             <branches>
